<resources>
    <string name="app_name">TrigpointingUK</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh Trigpoint Database</string>
    <string name="action_clearcache">Clear Cache</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="app_name_version">TrigpointingUK v%1$s (%2$d)</string>
    <string name="build_date">Built on %1$s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="acknowledgements_intro">This application would not be possible without the hard work of many people. Firstly, thanks are due to the many thousands of contributors to the various open-source projects used by this app.  Also to the whole OpenStreetMap community.\n\nAnd huge thanks to our thousands of users, for uploading the hundreds of thousands of logs and photos, that make this site what it is.\n\nIn particular, the TrigpointingUK project would not have been possible without the help of the following…</string>
    <string name="acknowledgements_list">- Brian Deegan
        \n- Adrian Dust
        \n- Ed Fielden
        \n- Jon Glew
        \n- Bernie Hughes
        \n- Barry Hunter
        \n- Martin Lycett
        \n- Chris Ottley
        \n- Geoff Robertshaw
        \n- <b>Mark (The Cat) Thompson</b>
        \n- John Ward
        \n- Rob Woodall
        \n- Graeme Paterson
    </string>
    <string name="pref_mapsforge_scale">Map scale factor</string>
    <string name="pref_mapsforge_scale_summary">Increase the size of map text and symbols. May require app restart.</string>
    <string name="downloadIdleStatus">Ready to download</string>
    <string name="downloadInsertStatus">Downloading...</string>
    <string name="btnDownload">Download</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnDownloadFinished">Download Complete</string>
    <string name="noUser">No user set</string>
    <string name="dlgNoTrigs">No trig points found</string>
    <string name="reset">Reset</string>
    <string name="errorcolour">Error</string>
    <string name="okcolour">OK</string>
    <string name="syncToTUK">Syncing to TUK...</string>
    <string name="syncPhotosToTUK">Syncing photos to TUK...</string>
    <string name="syncLogsFromTUK">Syncing logs from TUK...</string>
    <string name="toastPleaseLogin">Please login for a more personalised experience</string>
    <string name="filterAll">All</string>
    <string name="filterLogged">Logged</string>
    <string name="filterNotLogged">Not Logged</string>
    <string name="filterMarked">Marked</string>
    <string name="filterUnsynced">Unsynced</string>
    <string name="photoThumb">Photo Thumbnail</string>
    <string name="photoName">Photo Name</string>
    <string name="photoDescr">Photo Description</string>
    <string name="photoSubject">Photo Subject</string>
    <string name="photoIsPublic">Public Photo</string>
    <string name="photoSave">Save Photo</string>
    <string name="photoRemove">Remove Photo</string>
    <string name="logswitcher">Log Switcher</string>
    <string name="sendTime">Send Time</string>
    <string name="logTime">Log Time</string>
    <string name="logDate">Log Date</string>
    <string name="logGridref">Grid Reference</string>
    <string name="locationError">Location Error</string>
    <string name="logFB">Found By</string>
    <string name="logCondition">Condition</string>
    <string name="logScore">Score</string>
    <string name="logComment">Comment</string>
    <string name="logAdminFlag">Admin Flag</string>
    <string name="logUserFlag">User Flag</string>
    <string name="logGallery">Gallery</string>
    <string name="logAddPhoto">Add Photo</string>
    <string name="addLog">Add Log</string>
    <string name="logDelete">Delete Log</string>
    <string name="logGetLocation">Get Location</string>
    <string name="logUploadNow">Upload Now</string>
    <string name="logSyncLater">Sync Later</string>
    <string name="mapview">Map View</string>
    <string name="displaybitmap">Display Bitmap</string>
    <string name="zoomview">Zoom View</string>
    <string name="filter">Filter</string>
    <string name="filterBy">Filter by...</string>
    <string name="filterType">Filter Type</string>
    <string name="filterRadio">Filter Radio</string>
    <string name="logphoto">Log Photo</string>
    <string name="logtrig">Log Trig</string>
    <string name="downloadingPhotos">Downloading photos...</string>
    <string name="noPhotos">No photos available</string>
    <string name="downloadingLogs">Downloading logs...</string>
    <string name="noLogs">No logs available</string>
    <string name="radartitle">Radar Dialog</string>
    <string name="downloadMapsIdleStatus">Ready to download maps</string>
    <string name="downloadMapsInsertStatus">Downloading maps...</string>
    <string name="downloadMapsExplanation">The app automatically caches any map tiles that you view whilst online, providing basic offline coverage for areas you\'ve explored.\n\nFor better offline availability, you can bulk download UK-wide maps at various scale ranges below. This ensures comprehensive coverage even when you\'re completely offline.\n\n⚠️ Warning: Some of these files are very large (several hundred MB), so avoid downloading on a metered connection unless necessary.</string>
    <string name="cacheUsageFormat">Cache usage: %1$s</string>
    <string name="cacheTileCountFormat">%1$d tiles cached</string>
    <string name="clearCache">Clear cache (via Settings)</string>
    <string name="cacheCalculating">Calculating cache size...</string>
    <string name="arView">AR View</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refresh">Refresh</string>
    <string name="directions">Directions</string>
    <string name="browser">Browser</string>
    <string name="radar">Radar</string>
    <string name="map">Map</string>
    <string name="heading">Heading</string>
    <string name="downloadmaps">Download Maps</string>
    <string name="location">Location</string>
    <string name="compass">Compass</string>
    <string name="cloudmade">Cloudmade</string>
    <string name="cyclemap">Cycle Map</string>
    <string name="mapnik">Mapnik</string>
    <string name="mapquest">MapQuest</string>
    <string name="bingaerial">Bing Aerial</string>
    <string name="bingaeriallabels">Bing Aerial Labels</string>
    <string name="bingroad">Bing Road</string>
    <string name="bingosgb">Bing OSGB</string>
    <string name="byCondition">By Condition</string>
    <string name="none">None</string>
    <string name="byLogged">By Logged</string>
    <string name="tab_info">Info</string>
    <string name="tab_logs">Logs</string>
    <string name="tab_album">Album</string>
    <string name="tab_map">Map</string>
    <string name="tab_mylog">My Log</string>
    <string name="trig_name">Name</string>
    <string name="trig_gridref">Grid Reference</string>
    <string name="trig_condition">Condition</string>
    <string name="trig_height">Height</string>
    <string name="trig_type">Type</string>
    <string name="trig_county">County</string>
    <string name="trig_country">Country</string>
    <string name="preferences_name">Settings</string>
    <string name="trigdetails_name">Trigpoint Details</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_display_trigpoint">DisplayTrigpointActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_download_maps">Download Maps</string>
    <string name="title_activity_about">About</string>
    <string name="osmap_header">This screen caches a variety of static maps of the area</string>
    <string name="album_header">Photos taken by TrigpointingUK users</string>
    <string name="direction_arrow">Direction arrow</string>
    <string name="distance_zero">0 m</string>
    <string name="distance_accuracy">±0 m</string>
    <string name="bearing_format">Bearing: 000°</string>
    <string name="compass_calibration">Move your phone in a figure-8 to calibrate the compass</string>
    <string name="trigpoint_name_placeholder">Trigpoint Name</string>
    <string name="distance_zero_short">0m</string>
    <string name="login_instructions">Please enter your Trigpointing.UK website credentials. It is not currently possible to create an account using this app, only on the website.</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="photo_type_label">Photo Type:</string>
    <string name="caption_optional">Caption (optional):</string>
    <string name="caption_hint">Enter a caption for this photo</string>
    <string name="public_domain_photo">Make this photo public domain</string>
    <string name="public_domain_explanation">Public domain photos may be used by anyone for any purpose</string>
    <string name="filter_by_logging_status">Filter by logging status:</string>
    <string name="offline_maps">Offline Maps</string>
    <string name="cache_status">Cache Status</string>
    <string name="clear_cache_menu">Clear Cache</string>
    <string name="map_name_placeholder">Map Name</string>
    <string name="map_description_placeholder">Map description goes here.</string>
    <string name="map_size_format">Size: 0 MB</string>
    <string name="download_button">Download</string>
    <string name="photo_thumbnail_desc">Photo Thumbnail</string>
    <string name="photo_name_hint">Photo Name</string>
    <string name="photo_description_hint">Photo Description</string>
    <string name="public_photo">Public Photo</string>
    <string name="save_photo">Save Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="log_this_trigpoint">Log this trigpoint</string>
    <string name="date_label">Date:</string>
    <string name="time_label">Time:</string>
    <string name="log_time_question">Log time?</string>
    <string name="select_trigpoint_types">Select trigpoint types to display:</string>
    <string name="pillars_only">Pillars Only</string>
    <string name="pillars_plus_fbm">Pillars + FBM</string>
    <string name="fbm_only">FBM Only</string>
    <string name="passive_stations">Passive Stations</string>
    <string name="intersected_stations">Intersected Stations</string>
    <string name="all_except_intersected">All except Intersected</string>
    <string name="all_types">All Types</string>
    <string name="logged_or_not">Logged or not</string>
    <string name="mark_trigpoint">Mark this trig point</string>
    <string name="waypoint_label">Waypoint: </string>
    <string name="waypoint_placeholder">TR123</string>
    <string name="condition_label_colon">Condition: </string>
    <string name="condition_good">Good</string>
    <string name="grid_ref_label">Grid Ref: </string>
    <string name="grid_ref_placeholder">SU123456</string>
    <string name="wgs84_label">WGS84: </string>
    <string name="coordinates_placeholder">51.123, -1.456</string>
    <string name="current_label">Current: </string>
    <string name="current_yes">Yes</string>
    <string name="historic_label">Historic: </string>
    <string name="historic_no">No</string>
    <string name="type_label">Type: </string>
    <string name="type_pillar">Pillar</string>
    <string name="flush_bracket_label">Flush Bracket: </string>
    <string name="flush_bracket_unknown">Unknown</string>
    <string name="view_on_map">View on map</string>
    <string name="list_nearby_trigpoints">List nearby trigpoints</string>
    <string name="open_on_website">Open on trigpointing.uk</string>
    <string name="navigate_to_trigpoint">Navigate to trigpoint</string>
</resources>