<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_logging_status"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/filterRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/filterAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterAll" />

        <RadioButton
            android:id="@+id/filterLogged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterLogged" />

        <RadioButton
            android:id="@+id/filterNotLogged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterNotLogged" />

        <RadioButton
            android:id="@+id/filterMarked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterMarked" />

        <RadioButton
            android:id="@+id/filterUnsynced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterUnsynced" />

    </RadioGroup>

</LinearLayout>
