<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/trigpointTypesRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioTypesPillarsOnly"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/pillars_only"
            android:textSize="16sp"
            android:paddingStart="8dp" />

        <RadioButton
            android:id="@+id/radioTypesPillarsFBM"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/pillars_plus_fbm"
            android:textSize="16sp"
            android:paddingStart="8dp" />

        <RadioButton
            android:id="@+id/radioTypesFBMOnly"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/fbm_only"
            android:textSize="16sp"
            android:paddingStart="8dp" />

        <RadioButton
            android:id="@+id/radioTypesPassive"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/passive_stations"
            android:textSize="16sp"
            android:paddingStart="8dp" />

        <RadioButton
            android:id="@+id/radioTypesIntersected"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/intersected_stations"
            android:textSize="16sp"
            android:paddingStart="8dp" />

        <RadioButton
            android:id="@+id/radioTypesAllExceptIntersected"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/all_except_intersected"
            android:textSize="16sp"
            android:paddingStart="8dp" />

        <RadioButton
            android:id="@+id/radioTypesAll"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/all_types"
            android:textSize="16sp"
            android:paddingStart="8dp" />

    </RadioGroup>
</ScrollView>
