<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_open_web"
        android:title="@string/open_on_website"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_navigate"
        android:title="@string/navigate_to_trigpoint"
        android:icon="@android:drawable/ic_menu_directions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_compass"
        android:title="@string/guide_me_compass"
        android:icon="@android:drawable/ic_menu_compass"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
</menu>

